chore: integrate sonarcloud

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,22 @@ cache: bundler
 bundler_args: "--without development"
 rvm:
 - ruby-head
-- 3.0
-- 2.7
-- 2.6
-- 2.5
-- 2.4
 - jruby-9.2
+- 2.4
+- 2.5
+- 2.6
+- 2.7
+- 3.0
 services:
 - docker
 install: make install
+jobs:
+  include:
+    - stage: "sonar"
+      name: "Sonar Scanner"
+      language: ruby
+      rvm: 3.0
+      after_success: sonar-scanner
 script: make test
 matrix:
   allow_failures:
@@ -19,7 +26,8 @@ matrix:
   fast_finish: true
 deploy:
 - provider: script
-  script: echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin && make docker-build && make docker-push
+  script: echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin
+    && make docker-build && make docker-push
   skip_cleanup: true
   on:
     tags: true
@@ -37,3 +45,8 @@ notifications:
     on_failure: change
     rooms:
       secure: HG7rC5VSDOZiLCkpTsC4ZImh1k59OPi6YEjYKhdGXItybLHa6Yh5C42WvSx3kVW3SeyLOm1CiaMv+pbBZUXStXYsl8eH69MbEZimhDWsPs/m+bh+gEISov22WNUs3ZfUqIXMIb6v18oXPp2Qa1gX5LUEAGoSxHWNmCAcHayWl7M=
+addons:
+  sonarcloud:
+    organization: "twilio"
+    token:
+      secure: HfoKeXEgepsrIE/+zRX4nqIV/GwSeU8F9XPEVxJeXQYt+CdI3h0vqZs929m0wzs4LVBgTcZvTaMKuZtHPGOemyF55NjwGkAV8G/SdGWyokigQTgEjEw/2B+qMe+Uv2BVKgIcoH2b0k8DuZY0ICQAbPELaJyHXIS7RSx9gZO//X4=
