--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,6 +10,6 @@ sonar.tests=spec/
 sonar.test.exclusions=spec/integration/**/*.spec.rb
 
 # For Code Coverage analysis
-sonar.ruby.coverage.reportPaths=coverage/.resultset.json
+sonar.ruby.coverage.reportPaths=coverage/coverage.json
 # Exclude auto-generated code from coverage analysis
 sonar.coverage.exclusions=lib/twilio-ruby/rest/**/*
