--- a/.travis.yml
+++ b/.travis.yml
@@ -2,38 +2,40 @@ language: ruby
 cache: bundler
 bundler_args: "--without development"
 rvm:
-- ruby-head
-- jruby-9.2
-- 2.4
-- 2.5
-- 2.6
-- 2.7
-- 3.0
+  - ruby-head
+  - jruby-9.2
+  - 2.4
+  - 2.5
+  - 2.6
+  - 2.7
+  - 3.0
 services:
-- docker
+  - docker
 install: make install
 script: make test
 matrix:
   include:
     - language: ruby
       rvm: '3.0'
-      after_success: sonar-scanner
+      after_success:
+        - ruby -rjson -e 'sqube = JSON.load(File.read("coverage/.resultset.json"))["RSpec"]["coverage"].transform_values {|lines| lines["lines"]}; total = { "RSpec" => { "coverage" => sqube, "timestamp" => Time.now.to_i }}; puts JSON.dump(total)' > coverage/.resultset.sonarqube.json
+        - sonar-scanner
   allow_failures:
-  - rvm: ruby-head
+    - rvm: ruby-head
   fast_finish: true
 deploy:
-- provider: script
-  script: echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin
-    && make docker-build && make docker-push
-  skip_cleanup: true
-  on:
-    tags: true
-    rvm: '2.4'
-- provider: rubygems
-  api_key: "$RUBYGEMS_APIKEY"
-  on:
-    tags: true
-    rvm: '2.4'
+  - provider: script
+    script: echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin
+      && make docker-build && make docker-push
+    skip_cleanup: true
+    on:
+      tags: true
+      rvm: '2.4'
+  - provider: rubygems
+    api_key: "$RUBYGEMS_APIKEY"
+    on:
+      tags: true
+      rvm: '2.4'
 notifications:
   slack:
     if: branch = main
